[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nowpayment"
version = "1.9.0"
description = "A NowPayments.io client for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mostafa Mosavi", email = "mostafa.uwsgi@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.1,<3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["nowpayments", "crypto", "payments", "bitcoin", "api-client"]

[project.urls]
Homepage = "https://github.com/its0x4d/nowpayments"
Repository = "https://github.com/its0x4d/nowpayments"
Issues = "https://github.com/its0x4d/nowpayments/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["nowpayment*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that call the live NOWPayments sandbox API",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["nowpayment"]
